--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11283,12 +11283,14 @@ textarea.form-control-lg {
 }
 html, body {
   height: 100%;
+  background: #cc5333;
   color: white;
+  padding-bottom: 100px;
 }
 
 .content {
   width: 100%;
-  height: 100%;
+  height: auto;
   background: #23074d;
   /* fallback for old browsers */
   /* Chrome 10-25, Safari 5.1-6 */
