--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,16 +2,17 @@
 
 html, body {
     height: 100%;
-
+    background: #cc5333;
     color: white;
+    padding-bottom: 100px;
   }
 .content {
     width: 100%;
-    height: 100%;
-    background: #23074d;  /* fallback for old browsers */
+    height: auto;
+   background: #23074d;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #cc5333, #23074d);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+   
 }
 .navbar {
     margin-bottom: 40px;
